--- a/css.css
+++ b/css.css
@@ -5,8 +5,11 @@
 }
 
 body{
-	background: white;
+	background-image: url(backgrounds-white-18.jpg); ;
 	width: 100%;
+	background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 header{
@@ -16,6 +19,10 @@ header{
 	font-size: 24px;
 	font-weight: bold;
 	direction: rtl;
+	background-image: url(header-background.jpg);
+	background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 nav ul {
@@ -92,3 +99,4 @@ h2{
 	text-align: center;
 	margin:10px;
 }
+
