--- a/css.css
+++ b/css.css
@@ -23,6 +23,7 @@ header{
 	background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    color: white;
 }
 
 nav ul {
