--- a/css.css
+++ b/css.css
@@ -117,6 +117,11 @@ th{
 tr{
 	border-radius: 5px;
 }
+tr:hover{
+	background:#3b8aff9e;
+	color: white;
+    cursor: pointer;
+}
 td{
 	text-align: center;
 	padding: 10px;
