--- a/css.css
+++ b/css.css
@@ -86,6 +86,8 @@ nav ul a svg{
     display: flex;
     font-size: 18px;
     border-radius: 50px 0 0 50px;
+    -webkit-border-radius: 50px 0 0 50px;
+    -moz-border-radius:50px 0 0 50px;
     cursor: pointer;
 }
 .by_text svg{
@@ -111,7 +113,9 @@ nav ul a svg{
     direction: rtl;
     display: flex;
     justify-content: center;
-    border-radius:  0 50px  50px 0 ;
+    border-radius: 0 50px 50px 0;
+    -webkit-border-radius:0 50px 50px 0;
+    -moz-border-radius:0 50px 50px 0;
     border:1px solid #a0a0a0;
 }
 input::placeholder {
