--- a/css.css
+++ b/css.css
@@ -70,11 +70,36 @@ nav ul a svg{
 	width: 22px;
 	margin: 0 5px;
 }
+.box_contener{
+	display: flex;
+}
+
+.box_contener select{
+	padding: .7rem;
+    background: #4abeed;
+    height: fit-content;
+    align-self: center;
+    border-radius: 50px;
+    color: white;
+    font-size: larger;
+    font-family: Almarai;
+    display: flex;
+    justify-content: center;
+}
+
+.box_contener select option{
+	text-align: center;
+    align-self: center;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    margin: auto;
+}
 .by_text{
 	display: flex;
 	justify-content: center;
 	position: relative;
-	width: 500px;
+	width: 350px;
 	align-items: center;
 }
 .by_text button{
@@ -295,5 +320,8 @@ nav ul a svg{
 
 .edit_student {
 	margin-bottom: 1rem;
+}
+.box_contener{
+	flex-direction: column;
 }
 }
