--- a/css.css
+++ b/css.css
@@ -75,13 +75,13 @@ nav ul a svg{
 }
 
 .box_contener select{
-	padding: .7rem;
+	padding: 8px;
     background: #4abeed;
     height: fit-content;
     align-self: center;
     border-radius: 50px;
     color: white;
-    font-size: larger;
+    font-size: 18px;
     font-family: Almarai;
     display: flex;
     justify-content: center;
@@ -103,13 +103,12 @@ nav ul a svg{
 	align-items: center;
 }
 .by_text button{
-	padding: .8rem;
-    height: 2.7rem;
+	padding:8.5px;
     color: white;
     background: #4abeed;
     font-family: Almarai;
     display: flex;
-    font-size: 18px;
+    font-size: 16px;
     border-radius: 50px 0 0 50px;
     -webkit-border-radius: 50px 0 0 50px;
     -moz-border-radius:50px 0 0 50px;
@@ -130,9 +129,9 @@ nav ul a svg{
     margin: auto;
 }
 .search_box input{
-	padding: .8rem;
+	padding: 10px;
     margin: 1rem;
-    margin-left: 2px;
+    margin-left: -1px;
     width: 95%;
     direction: rtl;
     display: flex;
@@ -141,6 +140,7 @@ nav ul a svg{
     -webkit-border-radius:0 50px 50px 0;
     -moz-border-radius:0 50px 50px 0;
     border:1px solid #a0a0a0;
+    border-left-color: white;
 }
 input::placeholder {
 	font-size: 15px;
@@ -328,7 +328,7 @@ nav ul a svg{
 /*tablet screens layout*/
 @media only screen and (min-width: 600px ) and (max-width: 1024px) {
 	.box_contener{
-		width: 100%;
+		width: 98%;
 	    justify-content: center;
 
 	}
